--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Hux Blog
-SEOTitle: 王劲松的博客 | Hux Blog
+title: wangjinsong Blog
+SEOTitle: 王劲松的博客 | woody Blog
 header-img: img/home-bg.jpg
 email: haorenmin2008@163.com
 description: "这里是 @woodywang 的个人博客，与你一起发现更大的世界 | "
