--- a/_config.yml
+++ b/_config.yml
@@ -1,56 +1,47 @@
 # Site settings
-title: wangjinsong Blog
-SEOTitle: 王劲松的博客 | woody Blog
-header-img: img/home-bg.jpg
-email: haorenmin2008@163.com
-description: "这里是 @woodywang 的个人博客，与你一起发现更大的世界 | "
-keyword: "博客, 个人网站, 互联网, ai,llm"
-url: "" # your host, for absolute URL
-baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
+title: "Wang Jinsong Blog"
+SEOTitle: "王劲松的博客 | Woody Blog"
+header-img: "img/home-bg.jpg"
+email: "haorenmin2008@163.com"
+description: "这里是 @woodywang 的个人博客，与你一起发现更大的世界"
+keyword: "博客, 个人网站, 互联网, AI, LLM"
+url: "" # your site URL, e.g., "https://woodywang.github.io"
+baseurl: "" # e.g., "/blog" if your blog is hosted at "host/blog"
 
-# Publish posts or collection documents with a future date.
+# Publish posts or collection documents with a future date
 future: true
 
 # SNS settings
 RSS: false
-weibo_username: huxpro
-zhihu_username: huxpro
-github_username: huxpro
-twitter_username: huxpro
-#facebook_username:  huxpro
-#linkedin_username:  firstname-lastname-idxxxx
+weibo_username: "huxpro"
+zhihu_username: "huxpro"
+github_username: "huxpro"
+twitter_username: "huxpro"
+# facebook_username: "huxpro"
+# linkedin_username: "firstname-lastname-idxxxx"
 
 # Build settings
-# from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
-highlighter: rouge
-permalink: pretty
+highlighter: "rouge" # 'pygments' is no longer supported
+permalink: "pretty"
 paginate: 10
 exclude:
-  [
-    "less",
-    "node_modules",
-    "Gruntfile.js",
-    "package.json",
-    "README.md",
-    "README.zh.md",
-  ]
-anchorjs: true # if you want to customize anchor. check out line:181 of `post.html`
-# If you have timezone issue (e.g. #68) in China, uncomment to use this:
-#timezone: CN
+  - less
+  - node_modules
+  - Gruntfile.js
+  - package.json
+  - README.md
+  - README.zh.md
+anchorjs: true # if you want to customize anchor links, see line 181 of post.html
+# timezone: "CN" # Uncomment if you have timezone issues (e.g. #68)
 
-# Gems
-# from PR#40, to support local preview for Jekyll 3.0
-# make sure you have this gem installed
-# `$ gem install jekyll-paginate`
-plugins: [jekyll-paginate]
+# Plugins
+plugins:
+  - jekyll-paginate
 
 # Markdown settings
-# replace redcarpet to kramdown,
-# although redcarpet can auto highlight code, the lack of header-id make the catalog impossible, so I switch to kramdown
-# document: http://jekyllrb.com/docs/configuration/#kramdown
-markdown: kramdown
+markdown: "kramdown"
 kramdown:
-  input: GFM # use Github Flavored Markdown !important
+  input: "GFM" # use GitHub Flavored Markdown
   syntax_highlighter_opts:
     span:
       line_numbers: false
@@ -59,44 +50,42 @@ kramdown:
       start_line: 1
 
 # Disqus settings
-disqus_username: hux
+disqus_username: "hux"
 
 # Netease settings
 netease_comment: false
 
 # Analytics settings
 # Baidu Analytics
-# ba_track_id: [your track id]
+# ba_track_id: "your-baidu-id"
 
 # Google Analytics
 ga_track_id: "UA-49627206-1" # Format: UA-xxxxxx-xx
-ga_domain: huangxuan.me
+ga_domain: "huangxuan.me"
 
 # Sidebar settings
-sidebar: true # whether or not using Sidebar.
+sidebar: true # whether or not to use Sidebar
 sidebar-about-description: "要做一个有 swag 的程序员 <br> React Team @ Meta"
-sidebar-avatar: https://github.com/Huxpro.png # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: "https://github.com/Huxpro.png" # use absolute URL
 
 # Featured Tags
-featured-tags: true # whether or not using Feature-Tags
-featured-condition-size: 1 # A tag will be featured if the size of it is more than this condition value
+featured-tags: true # whether or not to use Featured Tags
+featured-condition-size: 1 # A tag will be featured if its size exceeds this value
 
-# Progressive Web Apps
+# Progressive Web App
 chrome-tab-theme-color: "#000000"
 service-worker: true
 
-# MathJax rendering for layout:page (e.g. post preview)
+# MathJax rendering for layout:page (e.g., post preview)
 page-mathjax: false
 
 # Friends
 friends:
-  [
-    { title: "乱序（Midare）", href: "http://mida.re/" },
-    { title: "Ebn Zhang", href: "https://ebnbin.dev/" },
-    { title: "Kun Qian", href: "http://kunq.me" },
-    { title: "Sherry Woo", href: "https://sherrywoo.me/" },
-    { title: "SmdCn", href: "http://blog.smdcn.net" },
-    { title: "JiyinYiyong", href: "http://tiye.me/" },
-    { title: "DHong Say", href: "http://dhong.co" },
-    { title: "尹峰以为", href: "http://ingf.github.io/" },
-  ]
+  - { title: "乱序（Midare）", href: "http://mida.re/" }
+  - { title: "Ebn Zhang", href: "https://ebnbin.dev/" }
+  - { title: "Kun Qian", href: "http://kunq.me" }
+  - { title: "Sherry Woo", href: "https://sherrywoo.me/" }
+  - { title: "SmdCn", href: "http://blog.smdcn.net" }
+  - { title: "JiyinYiyong", href: "http://tiye.me/" }
+  - { title: "DHong Say", href: "http://dhong.co" }
+  - { title: "尹峰以为", href: "http://ingf.github.io/" }
